[package]
name = "human-number"
description = "A library to format numbers in a pretty way."
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
keywords = ["numbers", "formatting", "filesize", "human", "magnitude"]
categories = ["value-formatting"]
repository = "https://github.com/jdrouet/pretty-number"
license = "MIT"
version = "0.1.3"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
test-case = "3.3.1"
